CKAD/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-busybox
  name: my-busybox
spec:
  containers:
  - image: busybox
    name: my-busybox
    command: ['sh', '-c', 'sleep 3000']
  dnsPolicy: ClusterFirst
  restartPolicy: Always
