CKAD/command-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: command-pod
   labels:
      app: my-app
spec:
   restartPolicy: Never
   containers:
   - name: my-app-c
     image: busybox
     command: ["echo"]
     args: ["this is specific argument"]
