CKAD/configmap.yaml
apiVersion: v1
kind: Pod
metadata:
   name: my-config-map-pod
spec:
   containers:
   - name: my-container
     image: busybox
     command: ['sh', '-c', 'echo $(MY_VAR) && sleep 3600']
---
apiVersion: v1
kind: Pod
metadata: 
   name: volume-pod-config
spec:
   containers:
   - name: my-c
     image: busybox
     command: ['sh', '-c', "echo $(cat /etc/config/ownerName) && sleep 3600"]
     volumeMounts:
     - name: config-volume
       mountPath: /etc/config
   volumes:
   - name: config-volume
     configMap:
        name: my-configmap
