CKAD/excercise.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  volumes:
  - name: config-volume
    configMap:
      name: candy-service-config 
  containers:
  - name: my-pod
    image: busybox
    command: ['sh', '-c', "echo $printenv && sleep 3600"]
    volumeMounts:
      - name: config-volume
        mountPath: /etc/candy-service
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
