CKAD/haproxy-ambassador-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fruit-service
spec:
  containers:
  - name: legacy-fruit-service
    image: linuxacademycontent/legacy-fruit-service:1
  - name: haproxy-ambassador
    image: haproxy:1.7
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /usr/local/etc/haproxy
  volumes:
  - name: config-volume
    configMap:
      name: haproxy-config
---
#lets test above after creating busybox-curl
   #step: 1 ==> kubectl get pod fruit-service -o=custom-columns=IP:.status.podIP --no-headers
   #step: 2 ==> kubectl exec busybox-curl -- curl http://10.8.0.19:80
apiVersion: v1
kind: Pod
metadata:
  name: busybox-curl
spec:
  containers:
  - name: busybox-curl
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
