CKAD/label-selector-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-prod-lable-pod
  labels:
    app: my-app
    env: production
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: my-prod-lable-dev
  labels:
    app: my-app
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  annotations:
    owner: Sanoop
    sub-owner: Yadav
  labels:
    app: my-app
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
