CKAD/secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sceret-pod
spec:
  containers:
  - name: my-sceret-pod
    image: busybox
    command: ['sh', '-c', "echo hello, kube! && sleep 3600"]
