CKAD/securityContextPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-pod
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
  - name: vol1
    emptyDir: {}
  - name: vol2
    emptyDir: {}
  containers:
  - name: security-context-pod
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
    volumeMounts:
    - name: vol1
      mountPath: /data/volume1
    - name: vol2
      mountPath: /data/volume2
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: security-context-pod1
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: security-context-pod1
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      runAsUser: 2000
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: security-context-pod2
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: security-context-pod2
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      runAsUser: 2000
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
      allowPrivilegeEscalation: false
