CKAD/temp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-curl
spec:
  containers:
  - name: busybox-curl
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
  - name: busybox-curl1
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 3600; done']
